--- a/django_blog/blog/templates/blog/posts_by_tag.html
+++ b/django_blog/blog/templates/blog/posts_by_tag.html
@@ -1,19 +1,7 @@
 {% extends 'blog/base.html' %}
 {% block content %}
 <div class="posts-container">
-    <!-- Search bar -->
-    <form method="GET" action="{% url 'search' %}" class="search-form">
-        <input type="text" name="q" placeholder="Search posts..." class="search-input">
-        <button type="submit" class="btn">Search</button>
-    </form>
-
-    <div class="posts-header">
-        <h2>Blog Posts</h2>
-        {% if user.is_authenticated %}
-        <a href="{% url 'post-create' %}" class="btn">New Post</a>
-        {% endif %}
-    </div>
-
+    <h2>Posts tagged with "{{ tag.name }}"</h2>
     {% for post in posts %}
     <div class="post-card">
         <h3><a href="{% url 'post-detail' post.pk %}">{{ post.title }}</a></h3>
@@ -24,10 +12,9 @@
             <a href="{% url 'posts-by-tag' tag.name %}" class="tag">{{ tag.name }}</a>
             {% endfor %}
         </div>
-        <a href="{% url 'post-detail' post.pk %}" class="btn">Read More</a>
     </div>
     {% empty %}
-    <p>No posts yet.</p>
+    <p>No posts with this tag.</p>
     {% endfor %}
 </div>
 {% endblock %}
